--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to git and github tutorial</h1>
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias alias laborum sunt, ex, libero saepe quae pariatur magni neque quam, nemo eum. Omnis magnam maiores eaque eum, debitis voluptas suscipit?</p>
 </body>
 </html>
